# melodramatique

./: .gitignore  README.md  build.sh  docker-compose.yml
.github/workflows/: action.yml
frontend/: Dockerfile
frontend/app/: db.py  main.py  requirements.txt  schema.yaml
frontend/app/static/fonts/: fonts.css
frontend/app/templates/: login.html.j2  meta.html.j2  schema.html.j2  search.html.j2
nginx/: Dockerfile  nginx.conf
nginx/static/js/: nav.js
search/: ingest.py
search/db/: schema.sql
search/melodrama-search/: Cargo.toml  Dockerfile  schema.yaml
search/melodrama-search/src/: server.rs
