[package]
name = "rustventually"
version = "0.1.0"
authors = ["Allie Signet <allie@cat-girl.gay>"]
edition = "2018"

[dependencies]
compass = {git = "https://github.com/alisww/compass.git", rev = "9cb80ad76b0506d670624dfd7cd3525ab711eb1e"}
actix-web = "3"
tokio-postgres = {version = "0.5.1", features = ["with-uuid-0_8", "with-serde_json-1"]}
deadpool-postgres = "0.5.0"
uuid = {version = "0.8", features = ["v4"]}
serde_json = "1"
serde_yaml = "0.8.17"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
actix-cors = "0.5.4"
log = "0.4.0"
env_logger = "0.8.3"

[[bin]]
name = "server"
path = "src/server.rs"
